--- a/login/resources/sass/abstracts/_variables.scss
+++ b/login/resources/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+$color-primary: #0b2255;
+$color-primary-light: #143673;
+$color-primary-dark: #07008a;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
@@ -18,7 +18,7 @@ $color-grey-dark-3: #333;
 
 $color-white: #fff;
 $color-black: #000;
-
+$color-red: rgba(204, 0, 0, 0.8);
 
 // FONT
 $default-font-size: 1.6rem;
