--- a/login/resources/sass/components/_button.scss
+++ b/login/resources/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    font-family: inherit;
     &,
     &:link,
     &:visited {
@@ -6,7 +7,7 @@
         text-decoration: none;
         padding: 1.5rem 4rem;
         display: inline-block;
-        border-radius: 10rem;
+        border-radius: 1rem;
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
