--- a/login/resources/sass/components/_form.scss
+++ b/login/resources/sass/components/_form.scss
@@ -8,11 +8,10 @@
         font-family: inherit;
         color: inherit;
         padding: 1.5rem 2rem;
-        border-radius: 2px;
-        background-color: rgba($color-white, .5);
+        border-radius: .5rem;
+        background-color: rgba($color-grey-light-2, .5);
         border: none;
         border-bottom: 3px solid transparent;
-        width: 90%;
         display: block;
         transition: all .3s;
 
