--- a/login/resources/sass/pages/_home.scss
+++ b/login/resources/sass/pages/_home.scss
@@ -1,94 +1,83 @@
-.section-about {
-    background-color: $color-grey-light-1;
-    padding: 25rem 0;
-    margin-top: -20vh;
 
-    @include respond(tab-port) {
-        padding: 20rem 0;
-    }
+#input-error {
+    color: $color-red;
 }
-
-.section-features {
-    padding: 20rem 0;
-    background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary-light, 0.8),
-        rgba($color-primary-dark, 0.8)),
-    url(../img/nat-4.jpg);
-    background-size: cover;
-    transform: skewY(-7deg);
-    margin-top: -10rem;
-
-    & > * {
-        transform: skewY(7deg);
-    }
-
-    @include respond(tab-port) {
-        padding: 10rem 0;
-    }
-
-}
-
-.section-tours {
-    background-color: $color-grey-light-1;
-    padding: 25rem 0 15rem 0;
-    margin-top: -10rem;
-
-    @include respond(tab-port) {
-        padding: 20rem 0 10rem 0;
-    }
-}
-
-.section-stories {
-    position: relative;
-    padding: 15rem 0;
-
-    @include respond(tab-port) {
-        padding: 10rem 0;
-    }
-}
-
 .section-book {
-    padding: 15rem 0;
-    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+    padding: 10rem 0;
 
-    @include respond(tab-port) {
-        padding: 10rem 0;
+    .row {
+        max-width: 90rem;
     }
 }
 
 .book {
-    background-image: linear-gradient(105deg, 
-                                    rgba($color-white, .9) 0%,
-                                    rgba($color-white, .9) 50%,
-                                    transparent 50%) ,
-                            url(../img/nat-10.jpg);
-    background-size: 100%;
-    border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
-
-    @include respond(tab-land) {
-        background-image: linear-gradient(105deg, 
-        rgba($color-white, .9) 0%,
-        rgba($color-white, .9) 65%,
-        transparent 65%) ,
-url(../img/nat-10.jpg);
-        background-size: cover;
+    background-color: $color-white;
+    border-radius: 2rem;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+    
+    .form__input {
+        width: 100%;
     }
-
-    @include respond(tab-port) {
-        background-image: linear-gradient(to right, 
-        rgba($color-white, .9) 0%,
-        rgba($color-white, .9) 100%),
-url(../img/nat-10.jpg);
+    .form__group {
+        width: 100%;
+        &__btn {
+            width: auto;
+            .btn {
+                width: 15rem;
+            }
+        }
     }
 
     &__form {
-        width: 50%;
-        padding: 6rem;
+        height: 60vh;
+        display: flex;
+        &__title {
+            margin-bottom: 1rem;
+            h2 {
+                color: $color-primary;
+                text-align: center;
+            }
+        }
+        &-image {
+            &-logo {
+                margin-bottom: 1rem;
+            }
+        }
 
+        @include respond(tab-port) {
+            width: 100%;
+        }
+    }
+
+    &__form-image {
+        width: 50%;
+        background-color: $color-primary-light;
+        
+        border-radius: 2rem 0 0 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        p {
+            color: $color-white;
+            font-size: 1.2rem;
+            text-align: center;
+        }
+        @include respond(tab-port) {
+            display: none;
+        }
+    }
+
+    #kc-form-login {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        padding: 3rem;
+        
         @include respond(tab-land) {
-            width: 65%;
+            width: 50%;
         }
 
         @include respond(tab-port) {
