--- a/login/resources/sass/abstracts/_variables.scss
+++ b/login/resources/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
-$color-primary: #0b2255;
+$color-primary: #003171;
 $color-primary-light: #143673;
-$color-primary-dark: #07008a;
+$color-primary-dark: #0A1E4B;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
@@ -15,6 +15,8 @@ $color-grey-light-2: #eee;
 $color-grey-dark: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
+$color-grey-dark-4: #eee;
+$color-grey-dark-5: #8E8E8E;
 
 $color-white: #fff;
 $color-black: #000;
