--- a/login/resources/sass/components/_button.scss
+++ b/login/resources/sass/components/_button.scss
@@ -5,7 +5,7 @@
     &:visited {
         text-transform: uppercase;
         text-decoration: none;
-        padding: 1.5rem 4rem;
+        padding: .8rem 4rem;
         display: inline-block;
         border-radius: 1rem;
         transition: all .2s;
