--- a/login/resources/sass/components/_form.scss
+++ b/login/resources/sass/components/_form.scss
@@ -7,13 +7,13 @@
         font-size: 1.5rem;
         font-family: inherit;
         color: inherit;
-        padding: 1.5rem 2rem;
+        padding: .8rem 2rem;
         border-radius: .5rem;
-        background-color: rgba($color-grey-light-2, .5);
+        background-color: #EAEDFF;
         border: none;
-        border-bottom: 3px solid transparent;
+        border: 3px solid #DBEAEE;
         display: block;
-        transition: all .3s;
+        // transition: all .3s;
 
         @include respond(tab-port) {
             width: 100%;
@@ -21,12 +21,12 @@
 
         &:focus {
             outline: none;
-            box-shadow: 0 1rem 2rem rgba($color-black, .1);
-            border-bottom: 3px solid $color-primary;
+            // box-shadow: 0 1rem 2rem rgba($color-black, .1);
+            // border-bottom: 3px solid $color-primary;
         }
 
         &:focus:invalid {
-            border-bottom: 3px solid $color-secondary-dark;
+            // border-bottom: 3px solid $color-secondary-dark;
         }
 
         &::-webkit-input-placeholder {
