--- a/login/resources/sass/pages/_home.scss
+++ b/login/resources/sass/pages/_home.scss
@@ -1,12 +1,22 @@
-
 #input-error {
     color: $color-red;
+    text-align: center;
+    margin-bottom: 1rem;
+    display: block;
+    font-size: large;
 }
+
+#kc-locale {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
 .section-book {
     padding: 10rem 0;
 
     .row {
-        max-width: 90rem;
+        max-width: 105rem;
     }
 }
 
@@ -14,45 +24,119 @@
     background-color: $color-white;
     border-radius: 2rem;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
-    
+    position: relative;
     .form__input {
         width: 100%;
+        font-family: yekan, FontAwesome;
     }
     .form__group {
         width: 100%;
         &__btn {
-            width: auto;
             .btn {
-                width: 15rem;
+                width: 100%;
+            }
+        }
+
+        &__login {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+            &__text {
+                text-align: center;
+                font-size: 20px;
+                color: $color-grey-dark-5;
+            }
+        }
+
+        &__external-link {
+            font-family: yekan, FontAwesome;
+            display: flex;
+            flex-direction: column;
+            a {
+                padding: 1rem;
+                &:link,
+                &:visited {
+                    display: inline-block;
+                    font-size: 20px;
+                    font-weight: 300;
+                    padding: 1rem 2rem;
+                    color: $color-primary;
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    @include respond(tab-port) {
+                        font-size: 12px;
+                    }
+                }
+                &:active {
+                    background-position: 100%;
+                    color: $color-primary;
+                    // transform: translateX(1rem);
+                }
+            }
+            .block {
+                cursor: not-allowed;
             }
         }
     }
 
     &__form {
-        height: 60vh;
+        // height: 71vh;
         display: flex;
         &__title {
-            margin-bottom: 1rem;
+            margin-bottom: 11px;
             h2 {
                 color: $color-primary;
                 text-align: center;
+                font-size: x-large;
+                @include respond-height(tab-port) {
+                    font-size: large;
+                }
             }
         }
         &-image {
             &-logo {
-                margin-bottom: 1rem;
+                // margin-bottom: 1rem;
+                height: 85%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-top: 70px;
+            }
+            &-text {
+                height: 15%;
+                display: flex;
+                align-items: flex-end;
+                justify-content: center; 
+                padding: 0 0 54px 0;
             }
         }
-
+        &-title-logo {
+            margin-bottom: 14px;
+            @include respond-height(tab-port) {
+                margin-bottom: 10px;
+            }
+        }
+        &-section {
+            width: 100%;
+            // padding: 3rem;
+        }
         @include respond(tab-port) {
             width: 100%;
+        }
+
+        // @include  respond-height(tab-land) {
+        //     min-height: 71vh;
+        // }
+
+        @include  respond-height(big-desktop) {
+            height: 65vh;
         }
     }
 
     &__form-image {
         width: 50%;
-        background-color: $color-primary-light;
-        
+        background-color: $color-primary;
+
         border-radius: 2rem 0 0 2rem;
         display: flex;
         justify-content: center;
@@ -70,17 +154,18 @@
 
     #kc-form-login {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: column;
         align-items: center;
         width: 50%;
-        padding: 3rem;
-        
+        padding: 54px 70px 0px 70px;
+
         @include respond(tab-land) {
-            width: 50%;
+            // width: 50%;
         }
 
         @include respond(tab-port) {
+            padding: 27px 35px 0px 35px;
             width: 100%;
         }
     }
