--- a/login/resources/sass/pages/_home.scss
+++ b/login/resources/sass/pages/_home.scss
@@ -29,7 +29,15 @@
         width: 100%;
         font-family: yekan, FontAwesome;
     }
+    .form__captcha {
+        position: absolute;
+        top: 6px;
+        left: 7px;
+        max-width: 180px;
+        max-height: 40px;
+    }
     .form__group {
+        position: relative;
         width: 100%;
         &__btn {
             .btn {
@@ -52,6 +60,16 @@
             font-family: yekan, FontAwesome;
             display: flex;
             flex-direction: column;
+            .ul {
+                display: flex;
+                justify-content: space-between;
+                .li {
+                    background-color: $color-primary;
+                    color: $color-white;
+                    text-align: center;
+                    margin: .25rem;
+                }
+            }
             a {
                 padding: 1rem;
                 &:link,
