add new form and refactring

--- a/login/resources/sass/base/_utilities.scss
+++ b/login/resources/sass/base/_utilities.scss
@@ -19,3 +19,9 @@
 
 .u-margin-top-big { margin-top: 8rem !important; }
 .u-margin-top-huge { margin-top: 10rem !important; }
+
+.main-color {
+    background-color: $color-primary !important;
+    color: white !important;
+}
+.center {display: flex !important; justify-content: center !important; align-items: center;}
