--- a/login/resources/sass/components/_button.scss
+++ b/login/resources/sass/components/_button.scss
@@ -51,6 +51,17 @@
             background-color: $color-primary;
         }
     }
+
+    &--light {
+        background-color: $color-white;
+        color: $color-primary;
+        border: 1px solid $color-primary;
+        text-align: center;
+        font-family: yekan, FontAwesome;
+        &::after {
+            background-color: $color-white;
+        }
+    }
     
     &::after {
         content: "";
