--- a/login/resources/sass/base/_base.scss
+++ b/login/resources/sass/base/_base.scss
@@ -46,9 +46,9 @@ body {
 }
 .kc-dropdown > a{
     display:block;
-    padding: 11px 10px 12px;
+    padding: 2rem;
     line-height: 12px;
-    font-size: 12px;
+    font-size: 18px;
     color: inherit;
     text-decoration: none;
     border-radius: .5rem;
@@ -91,5 +91,15 @@ body {
 }
 .kc-dropdown:hover ul{
     display:block;
+}
+
+jdp-container {
+    // position: absolute !important;
+    max-width: 85% !important;
+    bottom: 20px !important;
+}
+
+i {
+    font-style: normal !important;
 }
 
