--- a/login/resources/sass/components/_form.scss
+++ b/login/resources/sass/components/_form.scss
@@ -36,12 +36,12 @@
 
 
     &__label {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         font-weight: 700;
-        margin-left: 2rem;
-        margin-top: .7rem;
-        display: block;
-        transition: all .3s;
+        // margin-left: 2rem;
+        // margin-top: .7rem;
+        // display: block;
+        // transition: all .3s;
     }
 
     &__input:placeholder-shown + &__label {
