--- a/login/resources/sass/components/_form.scss
+++ b/login/resources/sass/components/_form.scss
@@ -1,6 +1,13 @@
 .form {
     &__group:not(:last-child) {
         margin-bottom: 2rem;
+        .field-icon {
+            float: left;
+            margin-left: 10px;
+            margin-top: -30px;
+            position: relative;
+            z-index: 2;
+          }
     }
 
     &__input {
@@ -9,9 +16,9 @@
         color: inherit;
         padding: .8rem 2rem;
         border-radius: .5rem;
-        background-color: #EAEDFF;
+        background-color: #fff;
         border: none;
-        border: 3px solid #DBEAEE;
+        border: 1px solid #00317194;
         display: block;
         // transition: all .3s;
 
