add fonts and refactoring

--- a/login/resources/sass/base/_base.scss
+++ b/login/resources/sass/base/_base.scss
@@ -95,6 +95,7 @@ body {
 
 jdp-container {
     // position: absolute !important;
+    font-family: Vazirmatn;
     max-width: 85% !important;
     bottom: 20px !important;
 }
