--- a/login/resources/sass/components/_button.scss
+++ b/login/resources/sass/components/_button.scss
@@ -57,7 +57,7 @@
         color: $color-primary;
         border: 1px solid $color-primary;
         text-align: center;
-        font-family: yekan, FontAwesome;
+        font-family: Vazirmatn, yekan, FontAwesome;
         &::after {
             background-color: $color-white;
         }
