--- a/login/resources/sass/base/_typography.scss
+++ b/login/resources/sass/base/_typography.scss
@@ -229,10 +229,24 @@
     font-display: swap;
   }
   
-  
+  @font-face {
+    font-family: Vazirmatn FD;
+    src: url('../fonts/Vazirmatn-UI-FD-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: Vazirmatn FD;
+    src: url('../fonts/Vazirmatn-FD-NL-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
 
 body {
-    font-family: Vazirmatn, yekan, Opensans, "Lato", sans-serif;
+    font-family: yekan, Vazirmatn FD NL, Vazirmatn, Vazirmatn FD, Opensans, "Lato", sans-serif;
     line-height: 1.7;
     color: $color-grey-dark;
 }
