--- a/login/resources/sass/pages/_home.scss
+++ b/login/resources/sass/pages/_home.scss
@@ -1,4 +1,5 @@
 #input-error {
+    display: none !important;
     color: $color-red;
     text-align: center;
     margin-bottom: 1rem;
@@ -6,9 +7,17 @@
     font-size: large;
 }
 
+.locale-font-family {
+    .rtl {
+        font-family: Vazirmatn FD;
+    }
+    .ltr {
+        font-family: Vazirmatn;
+    }
+}
+
 #kc-locale {
     position: absolute;
-    right: 0;
     top: 0;
 }
 
@@ -97,14 +106,20 @@
         font-family: Vazirmatn, yekan, FontAwesome;
     }
     .form__captcha {
-        position: absolute;
-        top: 5px;
-        left: 7px;
         max-width: 180px;
         max-height: 35px;
-
         @include respond(tab-port) {
             max-width: 100px;
+        }
+        & > .ltr {
+            position: absolute;
+            top: 5px;
+            right: 7px;
+        }
+        & > .rtl {
+            position: absolute;
+            top: 5px;
+            left: 7px;
         }
     }
     .form__group {
@@ -151,7 +166,7 @@
                     padding: 0.7rem 2rem;
                     color: $color-primary;
                     text-decoration: none;
-                    text-transform: uppercase;
+                    // text-transform: uppercase;
                     @include respond(tab-port) {
                         font-size: 12px;
                     }
@@ -170,6 +185,12 @@
 
     &__form {
         // height: 71vh;
+        & > .ltr {
+            border-radius: 0 2rem 2rem 0;
+        }
+        & > .rtl {
+            border-radius: 2rem 0 0 2rem;
+        }
         display: flex;
         &__title {
             margin-bottom: 11px;
@@ -225,8 +246,7 @@
     &__form-image {
         width: 50%;
         background-color: $color-primary;
-
-        border-radius: 2rem 0 0 2rem;
+        
         display: flex;
         justify-content: center;
         align-items: center;
@@ -240,6 +260,8 @@
             display: none;
         }
     }
+
+
 
     #kc-form-login {
         display: flex;
