--- a/login/resources/sass/components/_form.scss
+++ b/login/resources/sass/components/_form.scss
@@ -7,11 +7,11 @@
             position: relative;
             z-index: 2;
           }
-        .ltr {
+        > .ltr {
             float: right;
             margin-right: 10px;
         }
-        .rtl {
+        > .rtl {
             float: left;
             margin-left: 10px;
         }
