--- a/login/resources/sass/pages/_home.scss
+++ b/login/resources/sass/pages/_home.scss
@@ -41,6 +41,12 @@
     color: $color-primary;
 }
 
+.otp-user-phone-sent-txt {
+    display:inline-block;
+    direction: ltr;
+
+}
+
 .sms-container {
     // width: 20em;
     // background-color: #ffffff;
@@ -139,6 +145,9 @@
                 text-align: center;
                 font-size: 20px;
                 color: $color-grey-dark-5;
+                > .rtl {
+                    font-family: Vazirmatn FD;
+                }
             }
         }
 
