--- a/login/resources/sass/pages/_home.scss
+++ b/login/resources/sass/pages/_home.scss
@@ -30,6 +30,17 @@
     }
 }
 
+#kc-social-providers {
+    .ul {
+        flex-wrap: wrap;
+
+        .li {
+            flex: 1;
+            min-width: 45%;
+        }
+    }
+}
+
 .toggle-password {
     font-size: large !important;
     cursor: pointer !important;
@@ -275,7 +286,6 @@
 
     #kc-form-login {
         display: flex;
-        justify-content: flex-start;
         flex-direction: column;
         align-items: center;
         width: 50%;
