--- a/login/resources/css/login.css
+++ b/login/resources/css/login.css
@@ -1173,6 +1173,13 @@ body {
   display: block;
   font-size: large; }
 
+#kc-error-message {
+  color: rgba(204, 0, 0, 0.8);
+  text-align: center;
+  margin-bottom: 1rem;
+  display: block;
+  font-size: large; }
+
 .locale-font-family .rtl {
   font-family: Vazirmatn FD; }
 
