--- a/login/resources/sass/pages/_home.scss
+++ b/login/resources/sass/pages/_home.scss
@@ -7,6 +7,14 @@
     font-size: large;
 }
 
+#kc-error-message {
+    color: $color-red;
+    text-align: center;
+    margin-bottom: 1rem;
+    display: block;
+    font-size: large;
+}
+
 .locale-font-family {
     .rtl {
         font-family: Vazirmatn FD;
