--- a/login/resources/sass/pages/_home.scss
+++ b/login/resources/sass/pages/_home.scss
@@ -292,7 +292,7 @@
         }
     }
 
-    #kc-form-login {
+    #kc-form-login, #kc-passwd-update-form {
         display: flex;
         flex-direction: column;
         align-items: center;
