--- a/login/resources/sass/layout/_footer.scss
+++ b/login/resources/sass/layout/_footer.scss
@@ -2,7 +2,7 @@
     background-color: $color-grey-dark-3;
     padding: 10rem 0;
     font-size: 1.4rem;
-    color: $color-grey-light-1;
+    // color: $color-grey-light-1;
 
     @include respond(tab-port) {
         padding: 8rem 0;
@@ -48,7 +48,7 @@
     &__link {
         &:link,
         &:visited {
-            color: $color-grey-light-1;
+            // color: $color-grey-light-1;
             background-color: $color-grey-dark-3;
             text-decoration: none;
             text-transform: uppercase;
